QmidiNet - A MIDI Network Gateway via UDP/IP Multicast
------------------------------------------------------

ChangeLog

0.0.1  2010-03-07  First public release.