@@ -31,7 +31,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>QmidiNet - Options</string>
+   <string>Options - QmidiNet</string>
   </property>
   <property name="windowIcon">
    <iconset resource="qmidinet.qrc">
